增加异常信息

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -2,21 +2,21 @@
 # com.primeton.btp.engine.hosttrans.server
 # 300 030 000--300 030 999
 #########################
-#300030001=\u4e3b\u673aServer ID\u6ca1\u6709\u8bbe\u7f6e.
-#300030002=\u5df2\u7ecf\u5b58\u5728\u4e3b\u673aServer ID ''{0}''.
-#300030003=\u4e3b\u673aServer\u5df2\u7ecf\u5b58\u5728\u4e00\u4e2a.
+#300030001=\u4E3B\u673AServer ID\u6CA1\u6709\u8BBE\u7F6E.
+#300030002=\u5DF2\u7ECF\u5B58\u5728\u4E3B\u673AServer ID ''{0}''.
+#300030003=\u4E3B\u673AServer\u5DF2\u7ECF\u5B58\u5728\u4E00\u4E2A.
 
 #########################
 # com.primeton.btp.engine.hosttrans
 # 300 029 000--300 029 999
 #########################
-#300029000=\u6ca1\u627e\u5230\u4e3b\u673a\u670d\u52a1''{0}''.
+#300029000=\u6CA1\u627E\u5230\u4E3B\u673A\u670D\u52A1''{0}''.
 
 #########################
 # org.tis.tools.service
 # CORE-0001 ~ CORE-9999
 #########################
-AUTH-4440 = Execute app permission denied！Please contact your administrator for more information.
+AUTH-4440 = Execute app permission denied\uFF01Please contact your administrator for more information.
 AUTH-4441 = Execute function permission denied ! Please contact your administrator for more information.
 AUTH-4442 = Execute behaviour permission denied ! Please contact your administrator for more information.
 
@@ -142,6 +142,9 @@ AC-0076=Default operator identity is not allowed to be update or current name is
 # org.tis.tools.service.log
 # LOG-0001 ~ LOG-9999
 #########################
-LOG-0001=Not found entity correspond with ''{0}''!
-
+LOG-0001=\u8FD4\u56DE\u7ED3\u679C\u4E0D\u80FD\u4E3A\u7A7A\uFF01
+LOG-0002=\u8FD4\u56DE\u7C7B\u578B\u4E0E\u6307\u5B9A\u7C7B\u578B\u4E0D\u7B26\uFF01
+LOG-0003=\u627E\u4E0D\u5230\u5B9E\u4F53\u540D\u79F0\uFF01
+LOG-0004=\u627E\u4E0D\u5230\u5B9E\u4F53ID\u6CE8\u89E3\uFF01
+LOG-0005=\u5B9E\u4F53ID\u4E3A\u7A7A\uFF01
 
