--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -93,9 +93,16 @@ SYS-0016=Not found dictionary item with guid ''{0}''!
 #AC-0004=Lack ''{0}'', when insert ''{1}''!
 #AC-0005=insert ''{0}'' error, cause ''{1}''!
 
+AC-0001=Failure when insert acApp, cause ''{0}''!
+AC-0003=Failure when update acApp, cause ''{0}''!
 AC-0004=Failure when query acApp, cause ''{0}''!
+AC-0009=Failure when insert acFunc, cause ''{0}''!
+AC-0011=Failure when update acFunc, cause ''{0}''!
 AC-0014=Failure when delete acMenu, cause ''{0}''!
 AC-0015=Failure when update acMenu, cause ''{0}''!
+AC-0017=Failure when insert acFuncResource, cause ''{0}''!
+AC-0019=Failure when update acFuncResource, cause ''{0}''!
+AC-0020=Failure when query acFuncResource, cause ''{0}''!
 
 AC-0021=Failure when create acOperator, cause ''{0}''!
 AC-0022=Failure when delete acOperator, cause ''{0}''!
@@ -137,6 +144,9 @@ AC-0073=The opeator status ''{0}'' is error !
 AC-0074=The current operator status ''{0}'' is not allowed to be deleted !
 AC-0075=Permission denied !
 AC-0076=Default operator identity is not allowed to be update or current name is not allowed !
+
+AC-0077=Failure when insert acAppConfig, cause ''{0}''!
+AC-0079=Failure when update acAppConfig, cause ''{0}''!
 
 #########################
 # org.tis.tools.service.log
