新增了一个AC-0012

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -98,6 +98,7 @@ AC-0003=Failure when update acApp, cause ''{0}''!
 AC-0004=Failure when query acApp, cause ''{0}''!
 AC-0009=Failure when insert acFunc, cause ''{0}''!
 AC-0011=Failure when update acFunc, cause ''{0}''!
+AC-0012=Failure when insert acFunc, cause ''{0}''!
 AC-0014=Failure when delete acMenu, cause ''{0}''!
 AC-0015=Failure when update acMenu, cause ''{0}''!
 AC-0017=Failure when insert acFuncResource, cause ''{0}''!
