--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -54,7 +54,14 @@ CORE-0020=Failure when call ''{0}'', cause ''{1}''!
 OM-0001=Lack parameters for generator organization code, ''{0}'' is needed!
 OM-0002=Organization is not exist by org_code ''{0}''!
 OM-0003=Parameters is not allowed empty!
+
+OM-0014= Failure when update Organization, cause ''{0}''!
+
 OM-0022=exist running childorg!
+
+OM-0043= Failure when query Organization Tree, cause ''{0}''!
+OM-0044= Position is not exist by Position, cause ''{0}''!
+OM-0045= Failure when query Position Tree, cause ''{0}''!
 
 #########################
 # org.tis.tools.service.sys
@@ -80,6 +87,9 @@ SYS-0014=Failure when query ''{0}'', cause ''{1}''!
 
 SYS-0015=Not found dictionary with guid ''{0}''!
 SYS-0016=Not found dictionary item with guid ''{0}''!
+
+SYS-0019=Failure when insert ''{0}'', cause ''{1}''!
+SYS-0020=Failure when update ''{0}'', cause ''{1}''!
 
 
 
