新增了四个错误码

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -62,6 +62,12 @@ OM-0022=exist running childorg!
 OM-0043= Failure when query Organization Tree, cause ''{0}''!
 OM-0044= Position is not exist by Position, cause ''{0}''!
 OM-0045= Failure when query Position Tree, cause ''{0}''!
+OM-0046= \u521B\u5EFA\u5C97\u4F4D\u5E94\u7528\u5217\u8868\u65F6\u5C97\u4F4D\u4E0D\u5B58\u5728, cause ''{0}''!
+OM-0047= \u521B\u5EFA\u5C97\u4F4D\u5E94\u7528\u5217\u8868\u65F6\u5E94\u7528\u4E0D\u5B58\u5728, cause ''{0}''!
+OM-0048= \u5220\u9664\u6839\u673A\u6784\u5931\u8D25, cause ''{0}''!
+OM-0049= \u5220\u9664\u6839\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
+
+
 
 #########################
 # org.tis.tools.service.sys
