--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -62,10 +62,15 @@ OM-0022=exist running childorg!
 OM-0043= Failure when query Organization Tree, cause ''{0}''!
 OM-0044= Position is not exist by Position, cause ''{0}''!
 OM-0045= Failure when query Position Tree, cause ''{0}''!
+
 OM-0046= \u521B\u5EFA\u5C97\u4F4D\u5E94\u7528\u5217\u8868\u65F6\u5C97\u4F4D\u4E0D\u5B58\u5728, cause ''{0}''!
 OM-0047= \u521B\u5EFA\u5C97\u4F4D\u5E94\u7528\u5217\u8868\u65F6\u5E94\u7528\u4E0D\u5B58\u5728, cause ''{0}''!
 OM-0048= \u5220\u9664\u6839\u673A\u6784\u5931\u8D25, cause ''{0}''!
 OM-0049= \u5220\u9664\u6839\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
+OM-0050= \u67E5\u8BE2\u7EC4\u7EC7\u5931\u8D25, cause ''{0}''!
+OM-0051= \u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
+OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
+OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
 
 
 
@@ -169,6 +174,7 @@ AC-0080=\u67E5\u8BE2\u5E94\u7528\u4E2A\u6027\u5316\u914D\u7F6E\u5F02\u5E38, caus
 AC-0081=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 AC-0082=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5DE5\u4F5C\u7EC4\u5931\u8D25, cause ''{0}''!
 AC-0083=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u673A\u6784\u5931\u8D25, cause ''{0}''!
+AC-0084=\u5220\u9664\u64CD\u4F5C\u5458\u91CD\u7EC4\u83DC\u5355\u5931\u8D25, cause ''{0}''!
 
 
 #########################
