--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -119,7 +119,7 @@ AC-0003=Failure when update acApp, cause ''{0}''!
 AC-0004=Failure when query acApp, cause ''{0}''!
 AC-0009=Failure when insert acFunc, cause ''{0}''!
 AC-0011=Failure when update acFunc, cause ''{0}''!
-AC-0012=\u67E5\u8BE2\u5E94\u7528\u5931\u8D25, cause ''{0}''!
+AC-0012=Failure when insert acFunc, cause ''{0}''!
 AC-0014=Failure when delete acMenu, cause ''{0}''!
 AC-0015=Failure when update acMenu, cause ''{0}''!
 AC-0017=Failure when insert acFuncResource, cause ''{0}''!
@@ -153,11 +153,11 @@ AC-0061=Failure when set default acOperatorIdentity, cause ''{0}''!
 AC-0062=Failure when create acOperatorIdentityres, cause ''{0}''!
 AC-0063=Failure when delete acOperatorIdentityres, cause ''{0}''!
 AC-0064=Failure when update acOperatorIdentityres, cause ''{0}''!
-AC-0065=\u67E5\u8BE2\u64CD\u4F5C\u5458\u8EAB\u4EFD\u6743\u9650\u5931\u8D25, cause ''{0}''!
+AC-0065=Failure when update acOperatorIdentityres, cause ''{0}''!
 
 AC-0066=UserId ''{0}'' is already exist!
 AC-0067=NOT FOUNT AC_OPERATOR ''{0}'' !
-AC-0068=\u67E5\u8BE2\u89D2\u8272\u5931\u8D25,cause ''{0}'' !
+AC-0068=NOT FOUNT AC_ROLE ''{0}'' !
 AC-0069=User ''{0}'' password is wrong !
 AC-0070=Failure when login, cause ''{0}''!
 AC-0071=Identity ''{0}''  not corresponding to user ''{1}'' !
