--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -94,9 +94,6 @@ SYS-0014=Failure when query ''{0}'', cause ''{1}''!
 SYS-0015=Not found dictionary with guid ''{0}''!
 SYS-0016=Not found dictionary item with guid ''{0}''!
 
-SYS-0019=Failure when insert ''{0}'', cause ''{1}''!
-SYS-0020=Failure when update ''{0}'', cause ''{1}''!
-
 
 
 #########################
@@ -114,7 +111,7 @@ AC-0003=Failure when update acApp, cause ''{0}''!
 AC-0004=Failure when query acApp, cause ''{0}''!
 AC-0009=Failure when insert acFunc, cause ''{0}''!
 AC-0011=Failure when update acFunc, cause ''{0}''!
-AC-0012=\u67E5\u8BE2\u5E94\u7528\u5931\u8D25, cause ''{0}''!
+AC-0012=Failure when insert acFunc, cause ''{0}''!
 AC-0014=Failure when delete acMenu, cause ''{0}''!
 AC-0015=Failure when update acMenu, cause ''{0}''!
 AC-0017=Failure when insert acFuncResource, cause ''{0}''!
@@ -148,11 +145,11 @@ AC-0061=Failure when set default acOperatorIdentity, cause ''{0}''!
 AC-0062=Failure when create acOperatorIdentityres, cause ''{0}''!
 AC-0063=Failure when delete acOperatorIdentityres, cause ''{0}''!
 AC-0064=Failure when update acOperatorIdentityres, cause ''{0}''!
-AC-0065=\u67E5\u8BE2\u64CD\u4F5C\u5458\u8EAB\u4EFD\u6743\u9650\u5931\u8D25, cause ''{0}''!
+AC-0065=Failure when update acOperatorIdentityres, cause ''{0}''!
 
 AC-0066=UserId ''{0}'' is already exist!
 AC-0067=NOT FOUNT AC_OPERATOR ''{0}'' !
-AC-0068=\u67E5\u8BE2\u89D2\u8272\u5931\u8D25,cause ''{0}'' !
+AC-0068=NOT FOUNT AC_ROLE ''{0}'' !
 AC-0069=User ''{0}'' password is wrong !
 AC-0070=Failure when login, cause ''{0}''!
 AC-0071=Identity ''{0}''  not corresponding to user ''{1}'' !
@@ -164,12 +161,6 @@ AC-0076=Default operator identity is not allowed to be update or current name is
 
 AC-0077=Failure when insert acAppConfig, cause ''{0}''!
 AC-0079=Failure when update acAppConfig, cause ''{0}''!
-
-AC-0080=\u67E5\u8BE2\u5E94\u7528\u4E2A\u6027\u5316\u914D\u7F6E\u5F02\u5E38, cause ''{0}''!
-AC-0081=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
-AC-0082=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5DE5\u4F5C\u7EC4\u5931\u8D25, cause ''{0}''!
-AC-0083=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u673A\u6784\u5931\u8D25, cause ''{0}''!
-
 
 #########################
 # org.tis.tools.service.log
