--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -71,6 +71,7 @@ OM-0050= \u67E5\u8BE2\u7EC4\u7EC7\u5931\u8D25, cause ''{0}''!
 OM-0051= \u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
 OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
+OM-0054= \u65B0\u589E\u5458\u5DE5\u548C\u673A\u6784,\u5458\u5DE5\u548C\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 
 
 
@@ -119,7 +120,7 @@ AC-0003=Failure when update acApp, cause ''{0}''!
 AC-0004=Failure when query acApp, cause ''{0}''!
 AC-0009=Failure when insert acFunc, cause ''{0}''!
 AC-0011=Failure when update acFunc, cause ''{0}''!
-AC-0012=Failure when insert acFunc, cause ''{0}''!
+AC-0012=\u67E5\u8BE2\u5E94\u7528\u5931\u8D25, cause ''{0}''!
 AC-0014=Failure when delete acMenu, cause ''{0}''!
 AC-0015=Failure when update acMenu, cause ''{0}''!
 AC-0017=Failure when insert acFuncResource, cause ''{0}''!
@@ -153,11 +154,11 @@ AC-0061=Failure when set default acOperatorIdentity, cause ''{0}''!
 AC-0062=Failure when create acOperatorIdentityres, cause ''{0}''!
 AC-0063=Failure when delete acOperatorIdentityres, cause ''{0}''!
 AC-0064=Failure when update acOperatorIdentityres, cause ''{0}''!
-AC-0065=Failure when update acOperatorIdentityres, cause ''{0}''!
+AC-0065=\u67E5\u8BE2\u64CD\u4F5C\u5458\u8EAB\u4EFD\u6743\u9650\u5931\u8D25, cause ''{0}''!
 
 AC-0066=UserId ''{0}'' is already exist!
 AC-0067=NOT FOUNT AC_OPERATOR ''{0}'' !
-AC-0068=NOT FOUNT AC_ROLE ''{0}'' !
+AC-0068=\u67E5\u8BE2\u89D2\u8272\u5931\u8D25,cause ''{0}'' !
 AC-0069=User ''{0}'' password is wrong !
 AC-0070=Failure when login, cause ''{0}''!
 AC-0071=Identity ''{0}''  not corresponding to user ''{1}'' !
@@ -169,6 +170,13 @@ AC-0076=Default operator identity is not allowed to be update or current name is
 
 AC-0077=Failure when insert acAppConfig, cause ''{0}''!
 AC-0079=Failure when update acAppConfig, cause ''{0}''!
+
+AC-0080=\u67E5\u8BE2\u5E94\u7528\u4E2A\u6027\u5316\u914D\u7F6E\u5F02\u5E38, cause ''{0}''!
+AC-0081=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
+AC-0082=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5DE5\u4F5C\u7EC4\u5931\u8D25, cause ''{0}''!
+AC-0083=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u673A\u6784\u5931\u8D25, cause ''{0}''!
+AC-0084=\u5220\u9664\u64CD\u4F5C\u5458\u91CD\u7EC4\u83DC\u5355\u5931\u8D25, cause ''{0}''!
+
 
 #########################
 # org.tis.tools.service.log
