--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -71,6 +71,7 @@ OM-0050= \u67E5\u8BE2\u7EC4\u7EC7\u5931\u8D25, cause ''{0}''!
 OM-0051= \u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
 OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
+OM-0054= \u65B0\u589E\u5458\u5DE5\u548C\u673A\u6784,\u5458\u5DE5\u548C\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 
 
 
