工作组接口修改及补充

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -59,6 +59,8 @@ OM-0014= Failure when update Organization, cause ''{0}''!
 
 OM-0022=exist running childorg!
 
+OM-0036= 该工作组状态正在运行!
+
 OM-0043= Failure when query Organization Tree, cause ''{0}''!
 OM-0044= Position is not exist by Position, cause ''{0}''!
 OM-0045= Failure when query Position Tree, cause ''{0}''!
