新增错误码值

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -59,7 +59,7 @@ OM-0014= Failure when update Organization, cause ''{0}''!
 
 OM-0022=exist running childorg!
 
-OM-0036= 该工作组状态正在运行!
+OM-0036= \u8BE5\u5DE5\u4F5C\u7EC4\u72B6\u6001\u6B63\u5728\u8FD0\u884C!
 
 OM-0043= Failure when query Organization Tree, cause ''{0}''!
 OM-0044= Position is not exist by Position, cause ''{0}''!
@@ -74,6 +74,7 @@ OM-0051= \u67E5\u8BE2\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
 OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
 OM-0054= \u65B0\u589E\u5458\u5DE5\u548C\u673A\u6784,\u5458\u5DE5\u548C\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
+OM-0055= \u521B\u5EFA\u5C97\u4F4D\u5458\u5DE5\u5217\u8868\u65F6\u5DF2\u5B58\u5728, cause ''{0}''!
 
 
 
