--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -73,7 +73,8 @@ OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
 OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
 OM-0054= \u65B0\u589E\u5458\u5DE5\u548C\u673A\u6784,\u5458\u5DE5\u548C\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 OM-0055= \u521B\u5EFA\u5C97\u4F4D\u5458\u5DE5\u5217\u8868\u65F6\u5DF2\u5B58\u5728, cause ''{0}''!
-
+OM-0056= 查询工作组树失败！
+OM-0057= 机构代码对应的机构不存在!
 
 
 #########################
