--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -75,11 +75,13 @@ OM-0052= \u67E5\u8BE2\u64CD\u4F5C\u5458\u5931\u8D25, cause ''{0}''!
 OM-0053= \u67E5\u8BE2\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
 OM-0054= \u65B0\u589E\u5458\u5DE5\u548C\u673A\u6784,\u5458\u5DE5\u548C\u5C97\u4F4D\u5931\u8D25, cause ''{0}''!
 OM-0055= \u521B\u5EFA\u5C97\u4F4D\u5458\u5DE5\u5217\u8868\u65F6\u5DF2\u5B58\u5728, cause ''{0}''!
+OM-0056= 查询工作组树失败！
 OM-0057= \u5220\u9664\u5458\u5DE5\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0058= \u5220\u9664\u5458\u5DE5\u548C\u5DE5\u4F5C\u7EC4\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0059= \u5220\u9664\u5E94\u7528\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0060= \u5220\u9664\u5DE5\u4F5C\u7EC4\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0061= \u5220\u9664\u5458\u5DE5\u548C\u673A\u6784\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
+OM-0062= 机构guid对应的机构不存在！
 
 
 
