--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -82,6 +82,7 @@ OM-0059= \u5220\u9664\u5E94\u7528\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D2
 OM-0060= \u5220\u9664\u5DE5\u4F5C\u7EC4\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0061= \u5220\u9664\u5458\u5DE5\u548C\u673A\u6784\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0062= 机构guid对应的机构不存在！
+OM-0063= 工作组添加员工失败！
 
 
 
