新增了错误码

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -81,7 +81,10 @@ OM-0058= \u5220\u9664\u5458\u5DE5\u548C\u5DE5\u4F5C\u7EC4\u5173\u7CFB\u65F6\u593
 OM-0059= \u5220\u9664\u5E94\u7528\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0060= \u5220\u9664\u5DE5\u4F5C\u7EC4\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0061= \u5220\u9664\u5458\u5DE5\u548C\u673A\u6784\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
-OM-0062= \u673A\u6784guid\u5BF9\u5E94\u7684\u673A\u6784\u4E0D\u5B58\u5728\uFF01
+OM-0062= \u673A\u6784\u4EE3\u7801\u5BF9\u5E94\u7684\u673A\u6784\u4E0D\u5B58\u5728, cause ''{0}''!
+OM-0063= \u5DE5\u4F5C\u7EC4\u6DFB\u52A0\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
+OM-0064= \u67E5\u8BE2\u5C97\u4F4D\u5E94\u7528\u6743\u9650\u5931\u8D25, cause ''{0}''!
+OM-0065= \u65B0\u589E\u5E94\u7528\u6743\u9650\u5931\u8D25,\u56E0\u5DF2\u5B58\u5728\u8BE5\u5E94\u7528\u6743\u9650, cause ''{0}''!
 
 
 
