--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -85,7 +85,9 @@ OM-0062= \u673A\u6784\u4EE3\u7801\u5BF9\u5E94\u7684\u673A\u6784\u4E0D\u5B58\u572
 OM-0063= \u5DE5\u4F5C\u7EC4\u6DFB\u52A0\u5458\u5DE5\u5931\u8D25, cause ''{0}''!
 OM-0064= \u67E5\u8BE2\u5C97\u4F4D\u5E94\u7528\u6743\u9650\u5931\u8D25, cause ''{0}''!
 OM-0065= \u65B0\u589E\u5E94\u7528\u6743\u9650\u5931\u8D25,\u56E0\u5DF2\u5B58\u5728\u8BE5\u5E94\u7528\u6743\u9650, cause ''{0}''!
-
+OM-0066= \u4FEE\u6539\u5458\u5DE5\u5165\u804C\u4FE1\u606F\u65F6\u53C2\u6570\u4E0D\u8DB3, cause ''{0}''!
+OM-0067= \u5458\u5DE5\u5165\u804C\u5931\u8D25, cause ''{0}''!
+OM-0068= \u5458\u5DE5\u79BB\u804C\u5931\u8D25, cause ''{0}''!
 
 
 #########################
