--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_en_US.properties
@@ -199,7 +199,9 @@ AC-0082=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5DE5\u4F5C
 AC-0083=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u673A\u6784\u5931\u8D25, cause ''{0}''!
 AC-0084=\u5220\u9664\u64CD\u4F5C\u5458\u91CD\u7EC4\u83DC\u5355\u5931\u8D25, cause ''{0}''!
 AC-0085=\u5220\u9664\u89D2\u8272\u5931\u8D25, cause ''{0}''!
-
+AC-0086=\u65B0\u589E\u89D2\u8272\u529F\u80FD\u4FE1\u606F\u65F6\u529F\u80FD\u672A\u67E5\u5230, cause ''{0}''!
+AC-0087=\u65B0\u589E\u89D2\u8272\u529F\u80FD\u4FE1\u606F\u65F6\u5E94\u7528\u672A\u67E5\u5230, cause ''{0}''!
+AC-0088=\u67E5\u8BE2\u6743\u9650\u96C6\u5931\u8D25, cause ''{0}''!
 
 #########################
 # org.tis.tools.service.log
