新增错误码

--- a/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
+++ b/tools-abf-service/src/main/resources/META-INF/i18/ExceptionResource_zh_CN.properties
@@ -76,7 +76,7 @@ OM-0055= \u521B\u5EFA\u5C97\u4F4D\u5458\u5DE5\u5217\u8868\u65F6\u5DF2\u5B58\u572
 
 #OM-0056= \u67E5\u8BE2\u5DE5\u4F5C\u7EC4\u6811\u5931\u8D25\uFF01
 
-OM-0056= 查询工作组树失败！
+OM-0056= \u67E5\u8BE2\u5DE5\u4F5C\u7EC4\u6811\u5931\u8D25\uFF01
 
 OM-0057= \u5220\u9664\u5458\u5DE5\u548C\u5C97\u4F4D\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
 OM-0058= \u5220\u9664\u5458\u5DE5\u548C\u5DE5\u4F5C\u7EC4\u5173\u7CFB\u65F6\u5931\u8D25, cause ''{0}''!
@@ -92,9 +92,9 @@ OM-0066= \u4FEE\u6539\u5458\u5DE5\u5165\u804C\u4FE1\u606F\u65F6\u53C2\u6570\u4E0
 OM-0067= \u5458\u5DE5\u5165\u804C\u5931\u8D25, cause ''{0}''!
 OM-0068= \u5458\u5DE5\u79BB\u804C\u5931\u8D25, cause ''{0}''!
 
-#OM-0062= 机构guid对应的机构不存在！
-#OM-0063= 工作组添加员工失败！
-OM-0069= 工作组添加应用失败！
+#OM-0062= \u673A\u6784guid\u5BF9\u5E94\u7684\u673A\u6784\u4E0D\u5B58\u5728\uFF01
+#OM-0063= \u5DE5\u4F5C\u7EC4\u6DFB\u52A0\u5458\u5DE5\u5931\u8D25\uFF01
+OM-0069= \u5DE5\u4F5C\u7EC4\u6DFB\u52A0\u5E94\u7528\u5931\u8D25\uFF01
 
 
 #########################
@@ -206,7 +206,9 @@ AC-0082=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u5DE5\u4F5C
 AC-0083=\u65B0\u589E\u8EAB\u4EFD\u6743\u9650\u96C6\u65F6\u67E5\u8BE2\u673A\u6784\u5931\u8D25, cause ''{0}''!
 AC-0084=\u5220\u9664\u64CD\u4F5C\u5458\u91CD\u7EC4\u83DC\u5355\u5931\u8D25, cause ''{0}''!
 AC-0085=\u5220\u9664\u89D2\u8272\u5931\u8D25, cause ''{0}''!
-
+AC-0086=\u65B0\u589E\u89D2\u8272\u529F\u80FD\u4FE1\u606F\u65F6\u529F\u80FD\u672A\u67E5\u5230, cause ''{0}''!
+AC-0087=\u65B0\u589E\u89D2\u8272\u529F\u80FD\u4FE1\u606F\u65F6\u5E94\u7528\u672A\u67E5\u5230, cause ''{0}''!
+AC-0088=\u67E5\u8BE2\u6743\u9650\u96C6\u5931\u8D25, cause ''{0}''!
 
 #########################
 # org.tis.tools.service.log
